added sara photo

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,4 +1,10 @@
 div{
     background-color: bisque;
     padding: 10px;
+    margin-bottom: 5px;
+
+}
+#pic{
+    height: 50px;
+    width: 40px;
 }
